--- a/src/3DSampleApp/GCodePlayer3D.csproj
+++ b/src/3DSampleApp/GCodePlayer3D.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>_3DSampleApp</RootNamespace>
+    <RootNamespace>GCodePlayer3D</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
@@ -18,8 +18,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Caliburn.Micro" Version="4.0.173" />
+    <PackageReference Include="Caliburn.Micro.Core" Version="4.0.173" />
+    <PackageReference Include="DevExpress.Xpo" Version="19.2.6-pre-20006" />
     <PackageReference Include="HelixToolkit.Core.Wpf" Version="2.17.0" />
     <PackageReference Include="PropertyTools.Wpf" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GCodeParser\GCode.Core.csproj" />
   </ItemGroup>
 
 </Project>
